# hermes-studio

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release-macos.yml
backend/: pyproject.toml
backend/app/: desktop_server.py  main.py
backend/app/models/: ws_messages.py
backend/app/routers/: chat.py  computer_use.py  doctor.py  gateway.py  health.py  setup.py  tools.py  voice.py
backend/app/services/: hermes.py  native_computer_use.py
docs/: index.html  styles.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatContainer.tsx  InputBar.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ToolCallCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
frontend/src/components/voice/: VoiceHotkeyController.tsx  VoiceHud.tsx
frontend/src/hooks/: useHermesChat.tsx  useVoice.ts  useWebSocket.ts
frontend/src/lib/: api.ts  backend.ts  native.ts  types.ts
frontend/src/pages/: ChatPage.tsx  ComputerUsePage.tsx  ConnectionsPage.tsx  SetupPage.tsx  ToolsPage.tsx
frontend/src/stores/: chatStore.ts
scripts/: desktop-build.sh  desktop-dev-services.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
