[project]
name = "hermes-studio-backend"
version = "0.1.0"
description = "Backend API for Hermes Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
hermes = [
    "hermes-agent>=0.8.0",
    "firecrawl-py>=4.16.0,<5",
    "fal-client>=0.13.1,<1",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
voice = [
    "faster-whisper>=1.1.0",
    "mlx-whisper>=0.4.0; platform_system == 'Darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
