[package]
name = "hermes-studio"
version = "0.1.0"
description = "Native desktop shell for Hermes Studio"
authors = ["Hermes Studio Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
